--- a/en/about.html
+++ b/en/about.html
@@ -51,6 +51,7 @@
         <li><a href=""></a></li>
         <li><a href="../en/about.html">About</a></li>
         <li><a href="../en/city.html">City</a></li>
+        <li><a href="../en/history.html">History</a></li>
         <!--<li><a href="../en/schedule.html">Schedule</a></li>
         <li><a href="../en/talks.html">Talks</a></li>
         <li><a href="../en/poster_en.html">Posters</a></li>
@@ -68,7 +69,7 @@
         <li><a href=""></a></li>
         <li><a href="../en/network.html">Social</a></li>
         <li><a href="../en/conduct.html">Conduct</a></li>
-        <li><a href="../en/faq.html">FAQ</a></li>
+        <!--<li><a href="../en/faq.html">FAQ</a></li>-->
     </ul>
 
     <nav class="blue-grey" role="navigation" style="position:fixed">
@@ -95,6 +96,7 @@
         <li><a href="">Events:</a></li>
         <li><a href="../en/about.html">&#x2022; About</a></li>
         <li><a href="../en/city.html">&#x2022; City</a></li>
+        <li><a href="../en/history.html">&#x2022; History</a></li>
         <!--<li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
         <li><a href="../en/talks.html">&#x2022; Talks</a></li>
         <li><a href="../en/poster.html">&#x2022; Posters</a></li>
@@ -106,7 +108,7 @@
         <li><a href="">CONTACT:</a></li>
         <li><a href="../en/network.html">&#x2022; Social</a></li>
         <li><a href="../en/conduct.html">&#x2022; Conduct</a></li>
-        <li><a href="../en/faq.html">&#x2022; FAQ</a></li>
+        <!--<li><a href="../en/faq.html">&#x2022; FAQ</a></li>-->
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
@@ -126,121 +128,77 @@
             <div class="section" style="text-align: justify;">
 
                 <h4 class="header col s12 light">
-                Plurinational Bayesian Congress 2023
+                Plurinational Bayesian School 2023
                 <h4>
 
                 <h6 class="header col s12 light">
-                To boost the Bayesian communities in Latin America, a group of specialists from different regions decided to organize the first <b>Plurinational Bayesian Congress</b> on August 4, 5 and 6, 2023 in Santiago del Estero, Argentina.</h6>
+                The Plurinational Bayes community successfully held the Plurinational Bayesian Congress 2023 on August 4, 5 and 6 at the facilities of the Secretariat of Science and Technology of the province of Santiago del Estero, Argentina.
+                The diversity of disciplines and regions was extraordinary.
+                During the congress it became clear that there is an urgent need for more instances of theoretical and practical training in Bayesian methods.
+                Therefore, in the closing activity it was decided to organize the Plurinational Bayesian School 2024.</h6>
 
                 <h6 class="header col s12 light">
-                The diversity of disciplines was extraordinary: ecology, medicine, astronomy, geology, psychology, quantum physics, economics, engineering, philosophy, biology, statistics, computer science, anthropology, among others.
-                The diversity of regions as well: Chile, Paraguay, Uruguay, Colombia, Honduras, Brazil, Argentina (Córdoba, Salta, Mendoza, Entre Rios, Santa Fe, Santiago del Estero, Buenos Aires), from the private, public and academic sectors.
+                The Plurinational Bayesian School will be held for at least 3 days, initially from July 25 to 27, 2024 at the National University of Salta, Argentina. It will have practical workshops for beginners and intermediate levels during the morning, practical workshops for advanced levels during the afternoon, and presentations and round table discussions during the evening. The active search for speakers will take place during the first quarter of the year 2024. The school will end with a Hackathon that will last four months until the results are published.
                 </h6>
 
                 <h6 class="header col s12 light">
-                We shared ideas, experiences and doubts about the construction of knowledge in empirical sciences, using different dialects but with the same common language, that of the strict application of the rules of probability (aka Bayes) or that of intersubjective agreements in contexts of uncertainty.
-                Our gratitude to the team of the Secretariat of Science and Technology of Santiago del Estero for the integral and human professionalism.
+                <ul>
+                    <li> <b>Workshops for beginner-intermediate level "Empirical truths" (9am to 12am):</b>
+
+
+                    They will last 3 days and will provide a broad, comprehensive and in-depth overview of: Bayesian networks; causal inference and causal model evaluation; information theory and data operationalization; time series and approximations; decision making and gambling.
+                    </li>
+
+                    <br>
+
+                    <li> <b>Advanced level workshops "Optimal beliefs" (1:30pm to 16:30pm):</b>
+
+                    A minimum of three 2-3 hour workshops on specific applications currently used in the public sector, private sector or academia. They will be given by people who are currently using Bayesian methods in their work, and are expected to teach how to replicate part of the inference process that is commonly used to solve real problems.
+                    </li>
+
+                    <br>
+
+
+                    <li> <b>Exhibitions and debates "Intersubjective Agreements" (6pm to 9pm):</b>
+
+                    It will be organized in tables, ideally without overlapping. During the first hour of each day there will be 3 presentations of approximately 20 minutes each, given by leaders from different disciplines who work with Bayesian methods. This will be considered as part of the Plurinational Bayesian Congress 2024. There will also be an exhibition of papers in poster format. There will be panel discussions on topics of socio-environmental interest.
+                    </li>
+
+                    <br>
+
+                    <li> <b>Hackathon "Bets of Life":</b>
+
+                    It will be an inference problem with betting and resource sharing. The inference problem is an extended Monty Hall, which requires knowledge of time series and decision making seen in the initial-intermediate workshop.
+                    </li>
+                </ul>
                 </h6>
 
                 <h6 class="header col s12 light">
-                We returned with renewed energy. We have already started to build teams to organize next year's activities. In addition to webinars, workshops, face-to-face courses, we decided to organize a Plurinational Bayesian School-Congress 2024. Here are some pictures of the Plurinational Bayesian Congress 2023.
+                The Plurinational Bayesian School aims to strengthen the training offer in Bayesian inference through the development of workshops given by researchers in our region.
                 </h6>
 
                 <br>
 
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/01.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/02.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <!--<br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/03.jpg" alt="Figure 1">
-                </div>
-            </div>-->
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/04.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/05.jpeg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/21.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/07.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/10.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/13.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/27.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/31.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
+            <!--<div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
                 <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/39.jpg" alt="Figure 1">
                 </div>
+            </div>-->
+            <div class="figcontainer" style="align-items: center;">
+            <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 0%;">
+            <a href="https://www.unsa.edu.ar/"><img class="responsive-img" src="../logos/UNSa.png" alt="UNSa"></a>
             </div>
+
+            <div class="figure" style="flex: 0.5; margin-right: 6%;margin-left: 0%">
+            <a href="https://khipu.ai/"><img class="responsive-img" src="../logos/khipuX2.jpg" alt="khipu"></a>
+            </div>
+        </div>
+        <div class="figcontainer" style="align-items: center;">
+            <div class="figure" style="flex: 0.8; margin-right: 4%;margin-left: 4%; margin-bottom: 0%;">
+            <img class="responsive-img" src="../logos/BP.png" alt="BP">
+            </div>
+        </div>
+
 
             </div>
         </div>
