--- a/en/plural.html
+++ b/en/plural.html
@@ -51,6 +51,7 @@
         <li><a href=""></a></li>
         <li><a href="../en/about.html">About</a></li>
         <li><a href="../en/city.html">City</a></li>
+        <li><a href="../en/history.html">History</a></li>
         <!--<li><a href="../en/schedule.html">Schedule</a></li>
         <li><a href="../en/talks.html">Talks</a></li>
         <li><a href="../en/poster_en.html">Posters</a></li>
@@ -68,7 +69,7 @@
         <li><a href=""></a></li>
         <li><a href="../en/network.html">Social</a></li>
         <li><a href="../en/conduct.html">Conduct</a></li>
-        <li><a href="../en/faq.html">FAQ</a></li>
+        <!--<li><a href="../en/faq.html">FAQ</a></li>-->
     </ul>
 
     <nav class="blue-grey" role="navigation" style="position:fixed">
@@ -95,6 +96,7 @@
         <li><a href="">Events:</a></li>
         <li><a href="../en/about.html">&#x2022; About</a></li>
         <li><a href="../en/city.html">&#x2022; City</a></li>
+        <li><a href="../en/history.html">&#x2022; History</a></li>
         <!--<li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
         <li><a href="../en/talks.html">&#x2022; Talks</a></li>
         <li><a href="../en/poster.html">&#x2022; Posters</a></li>
@@ -106,7 +108,7 @@
         <li><a href="">CONTACT:</a></li>
         <li><a href="../en/network.html">&#x2022; Social</a></li>
         <li><a href="../en/conduct.html">&#x2022; Conduct</a></li>
-        <li><a href="../en/faq.html">&#x2022; FAQ</a></li>
+        <!--<li><a href="../en/faq.html">&#x2022; FAQ</a></li>-->
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
@@ -131,37 +133,46 @@
                 <h4>
 
                 <h6 class="header col s12 light">
-                The word Plurinational represents in South America the coexistence of our local cultural diversities. This vision is particularly appropriate for a community working with Bayesian methods because, unlike ad-hoc procedures that select a single hypothesis (e.g. by maximum likelihood), the strict application of probability rules (Bayesian approach) forces us to consider each and every hypothesis. Just as Bayesian methods adapt to uncertainty by believing in mutually contradictory hypotheses, a plurinational society adapts to life through the coexistence of our diversities.
+                The strict application of the rules of probability (or Bayesian approach) forms the basis of artificial intelligence (AI) and empirical sciences (or data-driven sciences) because it guarantees optimal beliefs given the available information.
+                The rules of probability have been known since the late 18th century and are conceptually intuitive: preserve the prior belief that remains compatible with the data (product rule) and predict with the contribution of all hypotheses (sum rule).
+                While nothing better in practical terms has been proposed in all this time, their application has historically been limited due to the computational cost associated with evaluating the entire hypothesis space.
+                On the eve of the 21st century these hurdles have been overcome in part due to modern computational and algorithmic advances.
+                Although the growth of the Bayesian approach is currently an accelerating worldwide phenomenon, historical inertia keeps its development incipient, especially in peripheral countries.
                 </h6>
 
                 <h6 class="header col s12 light">
-                Science has a claim to truth: to reach intersubjective agreements with universal validity.
-                Formal sciences (mathematics, logic) reach these agreements by deriving theorems within closed axiomatic systems.
-                However, the empirical sciences (from physics to the social sciences) must validate their propositions in open systems that always contain some degree of uncertainty.
-                Is it then possible to reach intersubjective agreements ("truths") in empirical sciences in which it is inevitable to say "I don't know"?
-                Yes.
-                We can avoid lying: by maximizing uncertainty (not asserting more than what is known) given the available information (without hiding what is known).
+                The relevance of these methods contrasts with the current situation in which the Bayesian approach is still marginal even in the most important universities in Plurinational America, and practically non-existent in empirical sciences that do not have specific training in mathematics and programming.
+                The following figure shows the number of scientific articles related to the Bayesian approach published each year with at least one author with affiliation in Plurinational America (source Scopus).
+                </h6>
+
+                <div class="figcontainer" style="align-items: center;">
+                    <div class="figure" style="flex: 0.8; margin-right: 4%;margin-left: 4%; margin-bottom:
+                    0%; margin-top:2%">
+                    <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/figuras/papers-en.jpg" alt="papers">
+                    </div>
+                </div>
+
+                <h6 class="header col s12 light">
+                At the end of the century, with the process of massification of personal computers, the Bayesian approach began to take center stage in artificial intelligence until 2012, when a deep convolutional neural network trained on GPUs was presented.
+                Again computational complexity acted as a limit to the strict application of the rules of probability, which force to evaluate the whole hypothesis space.
+                Even so, the rise of deep neural networks did not produce the emergence of a new system of reasoning under uncertainty with better performance than that of probability rules.
+                The Bayesian approach remains at the heart of artificial intelligence and of all empirical science.
+                In this context, NeurlIPS held a competition in 2021 called "Approximate inference in Bayesian Deep Learning", where it is confirmed that deep ensembles are good Bayesian approximations.
                 </h6>
 
                 <h6 class="header col s12 light">
-                The rules of probability have been known since the end of the 18th century and have since been adopted as a system of reasoning in all empirical sciences.
-                They are conceptually intuitive: preserve the prior belief that remains compatible with the data (product rule) and predict with the contribution of all hypotheses (sum rule).
-                Although nothing better has been proposed in the meantime, the computational cost associated with the evaluation of the entire hypothesis space has in fact limited its applicability.
-                Therefore, over time, partial solutions were developed, such as statistical physics in the 19th century and the frequentist approach in the 20th century.
-                Only with the enormous growth in computing power, on the eve of the 21st century, did it become possible for the first time to strictly apply the rules of probability in all fields of science.
+                Computational issues, however, are only the first step in artificial intelligence.
+                To explain the world and make decisions in contexts of uncertainty, it is necessary to propose causal theories that predict the effect of interventions on reality.
+                Causal theories are hypotheses, and as such can be evaluated by strict application of the rules of probability, P(Causal Theory|Data), which naturally penalizes unnecessary complexity of models.
+                Today artificial intelligence has the opportunity to make use of causal models developed in various empirical sciences, and empirical sciences have the opportunity to create and evaluate models tailored to each specific problem.
+                In this context, our objective is to promote Bayesian intelligence in Plurinational America and the peoples of the global south.
                 </h6>
 
                 <h6 class="header col s12 light">
-                After overcoming these obstacles, historical inertia now appears as one of the main limitations.
-                Although the growth of the Bayesian approach is currently an accelerating worldwide phenomenon, its development is still in its early stages.
-                Although knowledge under uncertainty is "plural and conditional", the traditional language of the empirical sciences is presented as "singular and definitve".
-                Just as selecting a single hypothesis has known negative consequences in probability (overfitting), the massive loss of cultural diversity caused by the imposition of a single type of society during colonial-modernity is having ecological consequences that metropolitan science is unable to compensate for.
-                </h6>
-
-                <h6 class="header col s12 light">
-                The goal of Bayes Plurinational is to strengthen the Bayesian communities of Latin America, the Caribbean and the peoples of the global South.
-                The scientific and philosophical transition is going to happen.
-                The advantage of plurality is a fact for knowledge and life.
+                The word Plurinational represents in South America the coexistence of our local cultural diversities.
+                This vision is particularly appropriate for a community working with Bayesian methods because, unlike ad-hoc procedures that select a single hypothesis (e.g. by maximum likelihood), the strict application of probability rules (Bayesian approach) forces us to consider each and every hypothesis.
+                Just as selecting a single hypothesis has known negative consequences in probability (overfitting), the massive loss of cultural diversity caused by the imposition of a single type of society during colonial-modernity is having increasingly obvious ecological consequences.
+                Just as Bayesian methods adapt to uncertainty while believing in mutually contradictory hypotheses, a plurinational society adapts to life through the coexistence of our diversities.
                 </h6>
 
 
