--- a/es/comunidad.html
+++ b/es/comunidad.html
@@ -51,6 +51,7 @@
         <li><a href=""></a></li>
         <li><a href="../es/descripcion.html">Descripción</a></li>
         <li><a href="../es/ciudad.html">Ciudad</a></li>
+        <li><a href="../es/historia.html">Historia</a></li>
         <!--<li><a href="../es/cronograma.html">Cronograma</a></li>
         <li><a href="../es/charlas.html">Charlas</a></li>
         <li><a href="../es/poster.html">Posters</a></li>
@@ -68,7 +69,7 @@
         <li><a href=""></a></li>
         <li><a href="../es/redes.html">Redes</a></li>
         <li><a href="../es/conducta.html">Conducta</a></li>
-        <li><a href="../es/faq.html">FAQ</a></li>
+        <!--<li><a href="../es/faq.html">FAQ</a></li>-->
     </ul>
 
     <nav class="blue-grey" role="navigation" style="position:fixed">
@@ -95,6 +96,7 @@
             <li><a href="">Eventos:</a></li>
             <li><a href="../es/descripcion.html">&#x2022; Descripción</a></li>
             <li><a href="../es/ciudad.html">&#x2022; Ciudad</a></li>
+            <li><a href="../es/historia.html">&#x2022; Historia</a></li>
             <!--<li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
             <li><a href="../es/charlas.html">&#x2022; Charlas</a></li>
             <li><a href="../es/poster.html">&#x2022; Posters</a></li>
@@ -106,12 +108,16 @@
             <li><a href="">CONTACTO:</a></li>
             <li><a href="../es/redes.html">&#x2022; Redes</a></li>
             <li><a href="../es/conducta.html">&#x2022; Conducta</a></li>
-            <li><a href="../es/faq.html">&#x2022; FAQ</a></li>
+            <!--<li><a href="../es/faq.html">&#x2022; FAQ</a></li>-->
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
     </nav>
     <!-- END HEADER -->
+
+
+
+
 
 
 
@@ -160,7 +166,7 @@
 <div class="section" style="text-align: justify;">
               <h4>Comunidad Bayesiana Plurinacional</h4>
               <img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/whipalaNico.jpeg" alt="Tapa" style="width: 80%;">
-              <h6>Abajo encontrará banderas de América Latina y el Caribe. Si ingresa, encontrará las redes de coautorías bayesianas (fuente scopus). Tocando los nodos "persona" se despliega el nombre y afiliación. Tocando los nodos "artículo" se despliegan el título y el abstract.</h6>
+              <h6>Abajo encontrará banderas de la América Plurinacional. Si ingresa, encontrará las redes de coautorías bayesianas (fuente scopus). Tocando los nodos "persona" se despliega el nombre y afiliación. Tocando los nodos "artículo" se despliegan el título y el abstract.</h6>
 
 
               <h6>Seleccionamos solo artículos que tuvieran una afiliación en latinoamérica y alguna de las siguientes palabras claves: (bayes OR bayesian OR causal inference OR state space model OR hidden markov model OR probabilistic programing OR markov chain monte carlo OR hamiltonian monte carlo OR hybrid monte carlo OR sequential monte carlo OR expectation propagation OR belief propagation OR variational inference OR MaxEnt OR sum-product algorithm) AND (NOT (naive bayes OR bayes syndrome))</h6>
