--- a/es/descripcion.html
+++ b/es/descripcion.html
@@ -51,6 +51,7 @@
         <li><a href=""></a></li>
         <li><a href="../es/descripcion.html">Descripción</a></li>
         <li><a href="../es/ciudad.html">Ciudad</a></li>
+        <li><a href="../es/historia.html">Historia</a></li>
         <!--<li><a href="../es/cronograma.html">Cronograma</a></li>
         <li><a href="../es/charlas.html">Charlas</a></li>
         <li><a href="../es/poster.html">Posters</a></li>
@@ -68,7 +69,7 @@
         <li><a href=""></a></li>
         <li><a href="../es/redes.html">Redes</a></li>
         <li><a href="../es/conducta.html">Conducta</a></li>
-        <li><a href="../es/faq.html">FAQ</a></li>
+        <!--<li><a href="../es/faq.html">FAQ</a></li>-->
     </ul>
 
     <nav class="blue-grey" role="navigation" style="position:fixed">
@@ -95,6 +96,7 @@
             <li><a href="">Eventos:</a></li>
             <li><a href="../es/descripcion.html">&#x2022; Descripción</a></li>
             <li><a href="../es/ciudad.html">&#x2022; Ciudad</a></li>
+            <li><a href="../es/historia.html">&#x2022; Historia</a></li>
             <!--<li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
             <li><a href="../es/charlas.html">&#x2022; Charlas</a></li>
             <li><a href="../es/poster.html">&#x2022; Posters</a></li>
@@ -106,12 +108,16 @@
             <li><a href="">CONTACTO:</a></li>
             <li><a href="../es/redes.html">&#x2022; Redes</a></li>
             <li><a href="../es/conducta.html">&#x2022; Conducta</a></li>
-            <li><a href="../es/faq.html">&#x2022; FAQ</a></li>
+            <!--<li><a href="../es/faq.html">&#x2022; FAQ</a></li>-->
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
     </nav>
     <!-- END HEADER -->
+
+
+
+
 
 
 
@@ -162,126 +168,77 @@
             <div class="section" style="text-align: justify;">
 
                 <h4 class="header col s12 light">
-                Congreso Bayesiano Plurinacional 2023
+                Escuela Bayesiana Plurinacional 2024
                 <h4>
 
                 <h6 class="header col s12 light">
-                Para promover el potencial del enfoque bayesiano en la academia, en la industria, en el estado y en las organizaciones sociales de América Latina, un grupo de especialistas de diversas regiones decidimos organizar el primer <b>Congreso Bayesiano Plurinacional</b> el 4, 5 y 6 de Agosto del 2023 en Santiago del Estero, Argentina.
+                La comunidad Bayes Plurinacional realizó con éxito el Congreso Bayesiano Plurinacional 2023 los días 4, 5 y 6 de agosto en las instalaciones de la Secretaría de Ciencia y Tecnología de la provincia de Santiago del Estero, Argentina. La diversidad disciplinar y de regiones fue extraordinaria. Durante el congreso quedó de manifiesto una imperiosa necesidad de contar con mayor cantidad de instancias de formación teórica y práctica en métodos bayesianos. Por ello, en la actividad de cierre se decidió organizar la Escuela Bayesiana Plurinacional 2024.
                 </h6>
                     
                 <h6 class="header col s12 light">
-                La diversidad disciplinar fue extraordinaria: ecología, medicina, astronomía, geología, psicología, cuántica, economía, ingeniería, filosofía, biología, estadística, computación, antropología, entre otras.
-                La diversidad de regiones también: Chile, Paraguay, Uruguay, Colombia, Honduras, Brasil, Argentina (Córdoba, Salta, Mendoza, Entre Rios, Santa Fe, Santiago del Estero, Buenos Aires), tanto del sector privado, del público y de la academia.
+                La Escuela Bayesiana Plurinacional se realizará al menos durante 3 días, en principio del 25 al 27 de julio de 2024 en la Universidad Nacional de Salta, Argentina. Contará con talleres prácticos de niveles inicial e intermedio durante la mañana, talleres prácticos de nivel avanzado durante la tarde, y exposiciones y mesas de debate durante la noche. La búsqueda activa de disertantes se realizará durante el primer cuatrimestre del año 2024. La escuela finalizará con un Hackatón que tiene una duración cuatrimestral hasta la publicación de los resultados.
                 </h6>
 
                 <h6 class="header col s12 light">
-                Compartimos ideas, experiencias y dudas sobre la construcción de conocimiento en ciencias empíricas, usando diferentes dialecto pero con un mismo lenguaje común, el de la aplicación estricta de las reglas de la probabilidad (aka Bayes) o el de los acuerdos intersubjetivos en contextos de incertidumbre.
-                El agradecimiento con el equipo de la Secretaría de Ciencia y Técnica de Santiago del Estero es total, por el profesionalismo integral y humano.
+                <ul>
+                    <li> <b>Talleres de nivel inicial-intermedio "Verdades empíricas" (9 a 12 hs):</b>
+
+
+                    Tendrán una duración de 3 días y darán una visión amplia, completa y profunda sobre: redes bayesianas; inferencia causal y evaluación de modelos causales; teoría de la información y operacionalización de datos; series temporales y aproximaciones; toma de decisiones y apuestas.
+                    </li>
+
+                    <br>
+
+                    <li> <b>Talleres de nivel avanzado "Creencias óptimas"(13:30 a 16:30 hs):</b>
+
+                    Un mínimo de tres talleres de 2 a 3 horas de duración sobre aplicaciones concretas utilizadas en la actualidad en el sector público, privado o en la academia. Serán dictados por personas que emplean actualmente métodos bayesianos en sus trabajos, y se espera que enseñen a replicar parte del proceso de inferencia que habitualmente se usan para la resolución de problemas reales.
+                    </li>
+
+                    <br>
+
+
+                    <li> <b>Exposiciones y debates "Acuerdos intersubjetivos" (18 a 21 hs):</b>
+
+                    Estará organizado en mesas, idealmente sin superposición. Durante la primera hora de cada día se realizan 3 exposiciones de aproximadamente 20 minutos cada una a cargo de referentes de diversas disciplinas que trabajen con métodos bayesianos. Esto será considerado como parte del Congreso Bayesiano Plurinacional 2024. Habrá también exposición de trabajos en formato póster. Se llevarán a cabo paneles de debate sobre temas de interés socio-ambiental.
+                    </li>
+
+                    <br>
+
+                    <li> <b>Hackatón "Apuestas de vida": </b>
+
+                    Será un problema de inferencia con apuestas e intercambio de recursos. El problema de inferencia es un Monty Hall extendido, que requiere conocimientos de series temporales y toma de decisiones vistos en el taller inicial-intermedio.
+                    </li>
+                </ul>
                 </h6>
 
                 <h6 class="header col s12 light">
-                Volvimos con la energía renovada. Ya empezamos a armar equipos para organizar las actividades del próximo año. Además de seminarios virtuales, encuentros de trabajo, cursos presenciales, decidimos organizar una Escuela-Congreso Bayesiana Plurinacional 2024. Aquí algunas fotos del Congreso Bayesiano Plurinacional 2023.
+                La Escuela Bayesiana Plurinacional tiene por objetivo fortalecer la oferta de formación en inferencia bayesiana mediante el desarrollo de talleres dictados por investigadores de nuestra región.
                 </h6>
 
                 <br>
 
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/01.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/02.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <!--<br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/03.jpg" alt="Figure 1">
-                </div>
-            </div>-->
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/04.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/05.jpeg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/21.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/07.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/10.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/13.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/27.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;align-items: center;">
-                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/31.jpg" alt="Figure 1">
-                </div>
-            </div>
-
-            <br>
-
-            <div class="figcontainer" style="align-items: center;">
+            <!--<div class="figcontainer" style="align-items: center;">
                 <div class="figure" style="flex: 1;align-items: center;">
                 <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/39.jpg" alt="Figure 1">
                 </div>
+            </div>-->
+            <div class="figcontainer" style="align-items: center;">
+            <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 0%;">
+            <a href="https://www.unsa.edu.ar/"><img class="responsive-img" src="../logos/UNSa.png" alt="UNSa"></a>
             </div>
 
+            <div class="figure" style="flex: 0.5; margin-right: 6%;margin-left: 0%">
+            <a href="https://khipu.ai/"><img class="responsive-img" src="../logos/khipuX2.jpg" alt="khipu"></a>
+            </div>
+        </div>
+        <div class="figcontainer" style="align-items: center;">
+            <div class="figure" style="flex: 0.8; margin-right: 4%;margin-left: 4%; margin-bottom: 0%;">
+            <img class="responsive-img" src="../logos/BP.png" alt="BP">
+            </div>
+        </div>
 
 
-                </div>
+        </div>
         </div>
 
         <p class="bottom-blank"><!--Vertical spacer--></p>
