--- a/es/plural.html
+++ b/es/plural.html
@@ -51,6 +51,7 @@
         <li><a href=""></a></li>
         <li><a href="../es/descripcion.html">Descripción</a></li>
         <li><a href="../es/ciudad.html">Ciudad</a></li>
+        <li><a href="../es/historia.html">Historia</a></li>
         <!--<li><a href="../es/cronograma.html">Cronograma</a></li>
         <li><a href="../es/charlas.html">Charlas</a></li>
         <li><a href="../es/poster.html">Posters</a></li>
@@ -68,7 +69,7 @@
         <li><a href=""></a></li>
         <li><a href="../es/redes.html">Redes</a></li>
         <li><a href="../es/conducta.html">Conducta</a></li>
-        <li><a href="../es/faq.html">FAQ</a></li>
+        <!--<li><a href="../es/faq.html">FAQ</a></li>-->
     </ul>
 
     <nav class="blue-grey" role="navigation" style="position:fixed">
@@ -95,6 +96,7 @@
             <li><a href="">Eventos:</a></li>
             <li><a href="../es/descripcion.html">&#x2022; Descripción</a></li>
             <li><a href="../es/ciudad.html">&#x2022; Ciudad</a></li>
+            <li><a href="../es/historia.html">&#x2022; Historia</a></li>
             <!--<li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
             <li><a href="../es/charlas.html">&#x2022; Charlas</a></li>
             <li><a href="../es/poster.html">&#x2022; Posters</a></li>
@@ -106,12 +108,16 @@
             <li><a href="">CONTACTO:</a></li>
             <li><a href="../es/redes.html">&#x2022; Redes</a></li>
             <li><a href="../es/conducta.html">&#x2022; Conducta</a></li>
-            <li><a href="../es/faq.html">&#x2022; FAQ</a></li>
+            <!--<li><a href="../es/faq.html">&#x2022; FAQ</a></li>-->
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
     </nav>
     <!-- END HEADER -->
+
+
+
+
 
 
 
@@ -163,45 +169,48 @@
                 Bayes Plurinacional
                 <h4>
 
+                <h6 class="header col s12 light">
+                La aplicación estricta de las reglas de probabilidad (o enfoque bayesiano) constituye la base de la inteligencia artificial (IA) y las ciencias empíricas (o ciencias con datos) debido a que garantiza creencias óptimas dada la información disponible.
+                Las reglas de la probabilidad se conocen desde finales del siglo 18 y son conceptualmente intuitivas: preservar la creencia previa que sigue siendo compatible con los datos (regla del producto) y predecir con la contribución de todas las hipótesis (regla de la suma).
+                Si bien en todo este tiempo no se ha propuesto nada mejor en términos prácticos, su aplicación se ha visto limitada históricamente debido al costo computacional asociado a la evaluación de todo el espacio de hipótesis.
+                En las vísperas del siglo 21 estos obstáculo han sido superado en parte gracias a los avances computacionales y algorítmicos modernos.
+                Si bien en la actualidad el crecimiento del enfoque bayesiano es un fenómeno mundial que se está acelerando, la inercia histórica hace que su desarrollo siga siendo incipiente, especialmente en países periféricos.
+                </h6>
+
+                <h6 class="header col s12 light">
+                La relevancia de dichos métodos contrasta con la realidad actual en la que el enfoque bayesiano es todavía marginal incluso en las universidades más importantes de la América Plurinacional, y prácticamente inexistente en ciencias empíricas que no cuentan con formación específica en matemática y programación.
+                En la siguiente figura se detalla la cantidad de artículos científicos vinculados al enfoque bayesiano publicados cada año con al menos una autoría con filiación en América Plurinacional (fuente Scopus).
+                </h6>
+
+                <div class="figcontainer" style="align-items: center;">
+                    <div class="figure" style="flex: 0.8; margin-right: 4%;margin-left: 4%; margin-bottom:
+                    0%; margin-top:2%">
+                    <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/figuras/papers-es.jpg" alt="papers">
+                    </div>
+                </div>
+
+                <h6 class="header col s12 light">
+                A finales de siglo, con el proceso de masificación de las computadoras personales, el enfoque bayesiano comenzó a ocupar el centro de atención de la IA hasta que en el año 2012 se presenta una red neuronal convolucional profunda entrenada sobre GPU.
+                Nuevamente la complejidad computacional actuó como un límite a la aplicación estricta de las reglas de la probabilidad, que obligan a evaluar todo el espacio de hipótesis.
+                Aún así, el auge de las redes neuronales profundas no produjo la aparición de un nuevo sistema de razonamiento bajo incertidumbre con mejor desempeño que el de las reglas de la probabilidad.
+                El enfoque bayesiano sigue siendo el corazón de la inteligencia artificial y de toda ciencia empírica.
+                En este contexto, NeurlIPS realizó una competencia en el año 2021 denominada "Approximate inference in Bayesian Deep Learning", donde se confirma que los deep ensambles son buenas aproximaciones bayesianas.
+                </h6>
+
+                <h6 class="header col s12 light">
+                Las cuestiones computacionales, sin embargo, son solo el primer paso de la inteligencia artificial.
+                Para explicar el mundo y tomar decisiones en contextos de incertidumbre es necesario proponer teorías causales que predigan el efecto de las intervenciones sobre la realidad.
+                Las teorías causales son hipótesis, y como tales pueden ser evaluadas mediante la aplicación estricta de las reglas de la probabilidad, P(Teoría causal|Datos), que penaliza naturalmente la complejidad innecesaria de los modelos.
+                Hoy la inteligencia artificial tiene la oportunidad de hacer uso de los modelos causales que se desarrollan en diversas ciencias empíricas, y las ciencias empíricas tienen la oportunidad de crear y evaluar modelos a la medida de cada problema específico.
+                En este contexto, nuestro objetivo es impulsar la inteligencia bayesiana en la América Plurinacional y los pueblos del sur global.
+                </h6>
 
                 <h6 class="header col s12 light">
                 La palabra Plurinacional representa en Sudamérica la coexistencia de nuestras diversidades culturales locales.
                 Esta visión es especialmente adecuada para una comunidad que trabaja con métodos bayesianos porque, a diferencia de los procedimientos ad-hoc que seleccionan una única hipótesis (por ejemplo, por máxima verosimilitud), la aplicación estricta de las reglas de probabilidad (enfoque bayesiano) nos obliga a considerar todas y cada una de las hipótesis.
-                Así como los métodos bayesianos adaptan la incertidumbre creyendo al mismo tiempo en hipótesis mutuamente contradictorias, una sociedad plurinacional se adapta a la vida mediante la coexistencia de nuestras diversidades.
+                Del mismo modo que seleccionar una única hipótesis tiene consecuencias negativas conocidas en probabilidad (overfitting), la masiva pérdida de la diversidad cultural provocada por la imposición de un único tipo de sociedad durante la colonial-modernidad está tenido consecuencia ecológicas cada vez más evidentes.
+                Así como los métodos bayesianos adaptan a la incertidumbre creyendo al mismo tiempo en hipótesis mutuamente contradictorias, una sociedad plurinacional se adapta a la vida mediante la coexistencia de nuestras diversidades.
                 </h6>
-
-                <h6 class="header col s12 light">
-                La ciencia tiene pretensión de verdad: alcanzar acuerdos intersubjetivos con validez universal.
-                Las ciencias formales (matemática, lógica) alcanzan estos acuerdos derivando teoremas dentro de sistemas axiomáticos cerrados.
-                Sin embargo, las ciencias empíricas (desde la física hasta las ciencias sociales) deben validar sus proposiciones en sistemas abiertos que contienen siempre algún grado de incertidumbre.
-                ¿Es posible entonces alcanzar acuerdos intersubjetivos ("verdades") en las ciencias empíricas en las que es inevitable decir "no sé"?
-                Sí.
-                Podemos evitar mentir: maximizando incertidumbre (no afirmar más de lo que se sabe) dada la información disponible (sin ocultar lo que sí se sabe).
-                </h6>
-
-
-                <h6 class="header col s12 light">
-                Las reglas de la probabilidad se conocen desde finales del siglo 18 y desde entonces se las ha adoptado como sistema de razonamiento en todas las ciencias empíricas.
-                Ellas son conceptualmente intuitivas: preservar la creencia previa que sigue siendo compatible con los datos (regla del producto) y predecir con la contribución de todas las hipótesis (regla de la suma).
-                Si bien luego de todo este tiempo no se ha propuesto nada mejor en lo práctico, el costo computacional asociados a la evaluación de todo el espacio de hipótesis ha limitado en los hechos su campo de aplicación.
-                Por eso, con el tiempo se fueron desarrollando soluciones parciales, como la física estadística en el siglo 19 y el enfoque frecuentista en el siglo 20.
-                Solo cuando se produce el enorme crecimiento en la capacidad de cómputo, en las vísperas del siglo 21, comienza por primera vez a ser posible aplicar de forma estricta las reglas de la probabilidad en todos los campos de la ciencia.
-                </h6>
-
-                <h6 class="header col s12 light">
-                Luego de superados estos obstáculos, la inercia histórica aparece ahora como una de las limitaciones principales.
-                Si bien en la actualidad el crecimiento del enfoque bayesiano es un fenómeno mundial que se está acelerando, su desarrollo sigue siendo incipiente.
-                A pesar de que el conocimientos bajo incertidumbre sea "plural y condicional", el lenguaje tradicional de las ciencias empíricas se presenta como "singular y definitvo".
-                Del mismo modo que seleccionar una única hipótesis tiene consecuencias negativas conocidas en probabilidad (overfitting), la masiva pérdida de la diversidad cultural provocada por la imposición de un único tipo de sociedad durante la colonial-modernidad está tenido consecuencia ecológicas que la ciencia metropolitana no es capaz de compensar.
-                </h6>
-
-                <h6 class="header col s12 light">
-                El objetivo de Bayes Plurinacional es fortalecer las comunidades bayesianas de latinoamericana, el caribe y los pueblos del sur global.
-                La transición científica y filosófica va a ocurrir.
-                La ventaja de la pluralidad es un hecho para el conocimiento y la vida.
-                </h6>
-
-
 
 
                 </div>
