--- a/en/community.html
+++ b/en/community.html
@@ -51,6 +51,7 @@
         <li><a href=""></a></li>
         <li><a href="../en/about.html">About</a></li>
         <li><a href="../en/city.html">City</a></li>
+        <li><a href="../en/history.html">History</a></li>
         <!--<li><a href="../en/schedule.html">Schedule</a></li>
         <li><a href="../en/talks.html">Talks</a></li>
         <li><a href="../en/poster_en.html">Posters</a></li>
@@ -68,7 +69,7 @@
         <li><a href=""></a></li>
         <li><a href="../en/network.html">Social</a></li>
         <li><a href="../en/conduct.html">Conduct</a></li>
-        <li><a href="../en/faq.html">FAQ</a></li>
+        <!--<li><a href="../en/faq.html">FAQ</a></li>-->
     </ul>
 
     <nav class="blue-grey" role="navigation" style="position:fixed">
@@ -95,6 +96,7 @@
         <li><a href="">Events:</a></li>
         <li><a href="../en/about.html">&#x2022; About</a></li>
         <li><a href="../en/city.html">&#x2022; City</a></li>
+        <li><a href="../en/history.html">&#x2022; History</a></li>
         <!--<li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
         <li><a href="../en/talks.html">&#x2022; Talks</a></li>
         <li><a href="../en/poster.html">&#x2022; Posters</a></li>
@@ -106,7 +108,7 @@
         <li><a href="">CONTACT:</a></li>
         <li><a href="../en/network.html">&#x2022; Social</a></li>
         <li><a href="../en/conduct.html">&#x2022; Conduct</a></li>
-        <li><a href="../en/faq.html">&#x2022; FAQ</a></li>
+        <!--<li><a href="../en/faq.html">&#x2022; FAQ</a></li>-->
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
@@ -126,7 +128,7 @@
           <div class="section" style="text-align: justify;">
               <h4>Plurinational Bayesian Community</h4>
               <img class="responsive-img" src="https://raw.githubusercontent.com/glandfried/images/master/whipalaNico.jpeg" alt="Tapa" style="width: 80%;">
-              <h6>Below you will find Latin American and Caribbean flags. There you will find the Bayesian coauthorship networks (scopus source). Touching the "person" nodes displays the name and affiliation. Touching the "article" nodes displays the title and abstract.</h6>
+              <h6>Below you will find flags of Plurinational America. There you will find the Bayesian coauthorship networks (scopus source). Touching the "person" nodes displays the name and affiliation. Touching the "article" nodes displays the title and abstract.</h6>
 
 
               <h6>We selected only the articles that had an affiliation in Latin America and any of the following keywords: (bayes OR bayesian OR causal inference OR state space model OR hidden markov model OR probabilistic programing OR markov chain monte carlo OR hamiltonian monte carlo OR hybrid monte carlo OR sequential monte carlo OR expectation propagation OR belief propagation OR variational inference OR MaxEnt OR sum-product algorithm) AND (NOT (naive bayes OR bayes syndrome))</h6>
