--- a/en/hackathon.html
+++ b/en/hackathon.html
@@ -51,6 +51,7 @@
         <li><a href=""></a></li>
         <li><a href="../en/about.html">About</a></li>
         <li><a href="../en/city.html">City</a></li>
+        <li><a href="../en/history.html">History</a></li>
         <!--<li><a href="../en/schedule.html">Schedule</a></li>
         <li><a href="../en/talks.html">Talks</a></li>
         <li><a href="../en/poster_en.html">Posters</a></li>
@@ -68,7 +69,7 @@
         <li><a href=""></a></li>
         <li><a href="../en/network.html">Social</a></li>
         <li><a href="../en/conduct.html">Conduct</a></li>
-        <li><a href="../en/faq.html">FAQ</a></li>
+        <!--<li><a href="../en/faq.html">FAQ</a></li>-->
     </ul>
 
     <nav class="blue-grey" role="navigation" style="position:fixed">
@@ -95,6 +96,7 @@
         <li><a href="">Events:</a></li>
         <li><a href="../en/about.html">&#x2022; About</a></li>
         <li><a href="../en/city.html">&#x2022; City</a></li>
+        <li><a href="../en/history.html">&#x2022; History</a></li>
         <!--<li><a href="../en/schedule.html">&#x2022; Schedule</a></li>
         <li><a href="../en/talks.html">&#x2022; Talks</a></li>
         <li><a href="../en/poster.html">&#x2022; Posters</a></li>
@@ -106,7 +108,7 @@
         <li><a href="">CONTACT:</a></li>
         <li><a href="../en/network.html">&#x2022; Social</a></li>
         <li><a href="../en/conduct.html">&#x2022; Conduct</a></li>
-        <li><a href="../en/faq.html">&#x2022; FAQ</a></li>
+        <!--<li><a href="../en/faq.html">&#x2022; FAQ</a></li>-->
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
