--- a/es/charlas.html
+++ b/es/charlas.html
@@ -50,6 +50,7 @@
         <li><a href=""></a></li>
         <li><a href="../es/descripcion.html">Descripción</a></li>
         <li><a href="../es/ciudad.html">Ciudad</a></li>
+        <li><a href="../es/historia.html">Historia</a></li>
         <!--<li><a href="../es/cronograma.html">Cronograma</a></li>
         <li><a href="../es/charlas.html">Charlas</a></li>
         <li><a href="../es/poster.html">Posters</a></li>
@@ -67,7 +68,7 @@
         <li><a href=""></a></li>
         <li><a href="../es/redes.html">Redes</a></li>
         <li><a href="../es/conducta.html">Conducta</a></li>
-        <li><a href="../es/faq.html">FAQ</a></li>
+        <!--<li><a href="../es/faq.html">FAQ</a></li>-->
     </ul>
 
     <nav class="blue-grey" role="navigation" style="position:fixed">
@@ -94,6 +95,7 @@
             <li><a href="">Eventos:</a></li>
             <li><a href="../es/descripcion.html">&#x2022; Descripción</a></li>
             <li><a href="../es/ciudad.html">&#x2022; Ciudad</a></li>
+            <li><a href="../es/historia.html">&#x2022; Historia</a></li>
             <!--<li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
             <li><a href="../es/charlas.html">&#x2022; Charlas</a></li>
             <li><a href="../es/poster.html">&#x2022; Posters</a></li>
@@ -105,12 +107,16 @@
             <li><a href="">CONTACTO:</a></li>
             <li><a href="../es/redes.html">&#x2022; Redes</a></li>
             <li><a href="../es/conducta.html">&#x2022; Conducta</a></li>
-            <li><a href="../es/faq.html">&#x2022; FAQ</a></li>
+            <!--<li><a href="../es/faq.html">&#x2022; FAQ</a></li>-->
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
     </nav>
     <!-- END HEADER -->
+
+
+
+
 
 
 
