--- a/es/historia.html
+++ b/es/historia.html
@@ -140,41 +140,157 @@
 
 
 
-        <div class="section no-pad-qqbot" id="index-banner">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <div class="section no-pad-bot" id="index-banner">
             <div class="container">
             </div>
         </div>
 
-
         <div class="container">
-            <div class="section">
-              <h4 class="header col s12 light">
-                Beca <b>Métodos</b> + <b>Sadosky</b>
-                </h4>
+            <div class="section" style="text-align: justify;">
 
-
-                <br>
+                <h4 class="header col s12 light">
+                Congreso Bayesiano Plurinacional 2023
+                <h4>
 
                 <h6 class="header col s12 light">
-                Los \(\text{Laboratorios}\) \(\text{de Métodos}\) \(\text{Bayesianos}\) y la \(\text{Fundación}\) \(\text{Sadosky}\) otorgan becas parciales a todas las personas que exponen durante el Congreso Bayesiano Plurinacional (charlas o posters). Ambas instituciones han puesto a disposición la misma cantidad de recursos para esta beca. El total se dividirá en partes iguales, y será entregado en persona en el transcurso de las actividades en Santiago del Estero.
+                Para promover el potencial del enfoque bayesiano en la academia, en la industria, en el estado y en las organizaciones sociales de América Latina, un grupo de especialistas de diversas regiones decidimos organizar el primer <b>Congreso Bayesiano Plurinacional</b> el 4, 5 y 6 de Agosto del 2023 en Santiago del Estero, Argentina.
+                </h6>
+                    
+                <h6 class="header col s12 light">
+                La diversidad disciplinar fue extraordinaria: ecología, medicina, astronomía, geología, psicología, cuántica, economía, ingeniería, filosofía, biología, estadística, computación, antropología, entre otras.
+                La diversidad de regiones también: Chile, Paraguay, Uruguay, Colombia, Honduras, Brasil, Argentina (Córdoba, Salta, Mendoza, Entre Rios, Santa Fe, Santiago del Estero, Buenos Aires), tanto del sector privado, del público y de la academia.
+                </h6>
+
+                <h6 class="header col s12 light">
+                Compartimos ideas, experiencias y dudas sobre la construcción de conocimiento en ciencias empíricas, usando diferentes dialecto pero con un mismo lenguaje común, el de la aplicación estricta de las reglas de la probabilidad (aka Bayes) o el de los acuerdos intersubjetivos en contextos de incertidumbre.
+                El agradecimiento con el equipo de la Secretaría de Ciencia y Técnica de Santiago del Estero es total, por el profesionalismo integral y humano.
+                </h6>
+
+                <h6 class="header col s12 light">
+                Volvimos con la energía renovada. Ya empezamos a armar equipos para organizar las actividades del próximo año. Además de seminarios virtuales, encuentros de trabajo, cursos presenciales, decidimos organizar una Escuela-Congreso Bayesiana Plurinacional 2024. Aquí algunas fotos del Congreso Bayesiano Plurinacional 2023.
                 </h6>
 
                 <br>
 
-
-              <div class="figcontainer" style="align-items: center;">
-                <div class="figure" style="flex: 1;">
-                <img class="responsive-img" src="logos/beca.png" alt="Metodos">
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/01.jpg" alt="Figure 1">
                 </div>
-              </div>
-
             </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/02.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <!--<br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/03.jpg" alt="Figure 1">
+                </div>
+            </div>-->
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/04.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/05.jpeg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/21.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/07.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/10.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/13.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/27.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/31.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+            <br>
+
+            <div class="figcontainer" style="align-items: center;">
+                <div class="figure" style="flex: 1;align-items: center;">
+                <img class="responsive-img" src="https://raw.githubusercontent.com/BayesPlurinacional/static/main/congreso2023/39.jpg" alt="Figure 1">
+                </div>
+            </div>
+
+
+
+                </div>
         </div>
 
         <p class="bottom-blank"><!--Vertical spacer--></p>
-
-        <br>
-        <br>
 
         <!-- BEGIN FOOTER -->
         <nav class="blue-grey" role="navigation" style="background-color:#1a1a1a; height:10%">
