--- a/es/index.html
+++ b/es/index.html
@@ -51,6 +51,7 @@
         <li><a href=""></a></li>
         <li><a href="../es/descripcion.html">Descripción</a></li>
         <li><a href="../es/ciudad.html">Ciudad</a></li>
+        <li><a href="../es/historia.html">Historia</a></li>
         <!--<li><a href="../es/cronograma.html">Cronograma</a></li>
         <li><a href="../es/charlas.html">Charlas</a></li>
         <li><a href="../es/poster.html">Posters</a></li>
@@ -68,7 +69,7 @@
         <li><a href=""></a></li>
         <li><a href="../es/redes.html">Redes</a></li>
         <li><a href="../es/conducta.html">Conducta</a></li>
-        <li><a href="../es/faq.html">FAQ</a></li>
+        <!--<li><a href="../es/faq.html">FAQ</a></li>-->
     </ul>
 
     <nav class="blue-grey" role="navigation" style="position:fixed">
@@ -95,6 +96,7 @@
             <li><a href="">Eventos:</a></li>
             <li><a href="../es/descripcion.html">&#x2022; Descripción</a></li>
             <li><a href="../es/ciudad.html">&#x2022; Ciudad</a></li>
+            <li><a href="../es/historia.html">&#x2022; Historia</a></li>
             <!--<li><a href="../es/cronograma.html">&#x2022; Cronograma</a></li>
             <li><a href="../es/charlas.html">&#x2022; Charlas</a></li>
             <li><a href="../es/poster.html">&#x2022; Posters</a></li>
@@ -106,12 +108,16 @@
             <li><a href="">CONTACTO:</a></li>
             <li><a href="../es/redes.html">&#x2022; Redes</a></li>
             <li><a href="../es/conducta.html">&#x2022; Conducta</a></li>
-            <li><a href="../es/faq.html">&#x2022; FAQ</a></li>
+            <!--<li><a href="../es/faq.html">&#x2022; FAQ</a></li>-->
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         </div>
     </nav>
     <!-- END HEADER -->
+
+
+
+
 
 
 
@@ -157,7 +163,7 @@
 
             <div class="center"><img class="responsive-img" src="../logos/BP.svg" alt="logo_unsl" style="width: 90%;">
             <h5 class="header col s12 light"><b>Acuerdos intersubjetivos en contextos de incertidumbre</b></h5>
-            <h6 class="header col s12 light">Impulsando las comunidades bayesianas de latinoamericana, el caribe y los pueblos del sur global. A pesar de que el conocimientos bajo incertidumbre sea "plural y condicional", la ciencia y la política colonial-moderna se ha presentado como "singular y definitiva". La transición científica, cultural y ecológica a favor de la pluralidad va a ocurrir.</h6>
+            <h6 class="header col s12 light">Impulsando las comunidades bayesianas en la América Plurinacional y los pueblos del sur global.</h6>
             </div>
 
             <br>
@@ -166,9 +172,9 @@
                 <h4 class="header col s12 light">Hacia la Escuela Bayesiana Plurinacional 2024!</h4>
             </div>
 
-			<div class="row center">
+			<!--<div class="row center">
                 <h5 class="header col s12 light">¡Participe de la creciente comunidad bayesiana plurinacional!</h5>
-            </div>
+            </div>-->
 
         </div>
         </div>
@@ -176,11 +182,11 @@
 
         <div class="figcontainer" style="align-items: center;">
             <div class="figure" style="flex: 0.3; margin-right: 4%;margin-left: 4%; margin-bottom: 4%;">
-            <a href="https://nodosde.gob.ar/"><img class="responsive-img" src="../logos/UNSa.png" alt="UNSa"></a>
+            <a href="https://www.unsa.edu.ar/"><img class="responsive-img" src="../logos/UNSa.png" alt="UNSa"></a>
             </div>
 
-            <div class="figure" style="flex: 0.33; margin-right: 6%;margin-left: 6%">
-            <a href="http://turnos.sde.gob.ar/secitec/"><img class="responsive-img" src="../logos/khipu.jpg" alt="khipu"></a>
+            <div class="figure" style="flex: 0.5; margin-right: 6%;margin-left: 0%">
+            <a href="https://khipu.ai/"><img class="responsive-img" src="../logos/khipuX2.jpg" alt="khipu"></a>
             </div>
         </div>
 <!--
@@ -196,16 +202,15 @@
         </div>-->
 
 
-        <div class="figcontainer" style="align-items: center;">
+        <!--<div class="figcontainer" style="align-items: center;">
             <div class="figure" style="flex: 0.28; margin-right: 6%;margin-left: 0%">
             <a href="https://www.s-a-e.org.ar/"><img class="responsive-img" src="../logos/sae.jpeg" alt="logo_unr"></a>
-            <!--<figcaption>Regresión bayesiana</figcaption>-->
             </div>
 
             <div class="figure" style="flex: 0.26;margin-right: 2%;margin-left: 2%">
             <a href="https://github.com/PythonNorte"><img class="responsive-img" src="../logos/pythonNorte.jpg" alt="Python Norte"></a>
             </div>
-        </div>
+        </div>-->
 
 
 
